<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.haylin2002.parselocaldatabase.LogIn"
    >


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:hint="@string/signup_username"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/signup_email"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password2"
        android:hint="@string/signup_password2"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/signup_password"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/signUp"
        android:onClick="register"
        android:textColor="@android:color/white"
        android:background="@color/primary"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_female"
        android:id="@+id/radiobutton_female"
        android:layout_below="@+id/password2"
        android:layout_alignLeft="@+id/password2"
        android:layout_alignStart="@+id/password2"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_male"
        android:id="@+id/radiobutton_male"
        android:layout_below="@+id/password2"
        android:layout_alignRight="@+id/password2"
        android:layout_alignEnd="@+id/password2"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:onClick="onRadioButtonClicked"/>


</RelativeLayout>
