<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.haylin2002.loveStory.LoveStory">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/action_new"
        android:title="New"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/title_activity_my_account"
        android:icon="@drawable/profile_icon"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/title_activity_sort"
        android:icon="@drawable/sort"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>
</menu>
