<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.haylin2002.parselocaldatabase.LogIn"
    >


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:hint="@string/signup_username"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/signup_password"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/logIn"
        android:onClick="logIn"
        android:textColor="@android:color/white"
        android:background="@color/primary"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/accent"
        android:id="@+id/button"
        android:layout_below="@+id/logIn"
        android:layout_centerHorizontal="true"
        android:onClick="forgetPassword"/>


</RelativeLayout>
